# stencil

./: .gitignore  LICENSE  README.md  example-config.toml  notes.txt  pyproject.toml
stencil/: __init__.py  __main__.py  _version.py  config.py  constants.py  datacls.py  finder.py  logs.py  objects.py
tests/: test_finder.py
