[tool.poetry]
name = "stencil-blog"
version = "0.1.0"
description = "Python static site builder with an emphasis on metadata."
authors = ["Blake VandeMerwe <blakev@null.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mistune = {git = "https://github.com/lepture/mistune.git"}
pygments = "^2.6.1"
toml = "^0.10.0"
ujson = "^2.0.1"
jinja2 = "^3.1.3"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
tox = "^3.14.5"
mypy = "^0.761"

[tool.black]
line-length = 96
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
  | scratch.py
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
